# Mtac2

./: _CoqProject  coq-mtac2.opam
src/: MetaCoqPlugin.mlpack  constrs.ml  constrs.mli  dune  mConstr.ml  mConstr.mli  metaCoqInterp.ml  run.ml  run.mli  typelevel.ml  typelevel.mli  utils.ml
tests/: ConstrSelector.v  DepDestruct.v  Refresh.v  bug_universes.v  declare.v  goal_reordering.v  inspect.v  min_bug_univpoly.v  refresh.v  test_mmatch.v
theories/: Base.v  DecomposeApp.v  Pattern.v  broken.v  dune
theories/ideas/: Abstract.v  DepDestruct.v  Pre-typedtactics.v  Reification.v  SpineNormalForm.v  Transport.v  non_refl_refl.v
theories/intf/: Case.v  DeclarationDefs.v  Dyn.v  Exceptions.v  Goals.v  Lift.v  M.v  MTele.v  Name.v  Reduction.v  Refresh.v  Sorts.v  Unification.v
theories/lib/: Datatypes.v  List.v  Logic.v  NEList.v  Specif.v  Utils.v
theories/meta/: Exhaustive.v  MFix.v  MFixDef.v  MTeleMatch.v  MTeleMatchDef.v
theories/tactics/: CompoundTactics.v  ConstrSelector.v  ImportedTactics.v  IntroPatt.v  Tactics.v  TacticsBase.v  Ttactics.v
